--- a/apps/transit_service/web/schedule.html
+++ b/apps/transit_service/web/schedule.html
@@ -69,6 +69,9 @@
     </div>
     <div><input type="button" value="Schedule Trip" onclick="schedule()"></div>
 
+    <div><input type="button" value="Add Human" onclick="addHuman()" style="margin-top: 10px;"></div>
+
+
     <div id="nameError"></div>
 
     <script>
@@ -78,6 +81,8 @@
         var trip = [];
 
         var helicopterID = 1;
+
+        var humanID = 1;
 
         // This method is called when the document is loaded
         $(document).ready(function () {
@@ -163,6 +168,25 @@
                 $("#map").html("");
                 $("#name").val("");
             }
+        }
+
+        //this function creates humans
+        function addHuman() {
+            api.sendCommand("CreateEntity", {
+                "type": "human",
+                "name": "Human-"+humanID,
+                "mesh": "assets/model/human.glb",
+                "position": [700, 290, 400],
+                "scale": [0.005, 0.005, 0.005],
+                "rotation": [0, 0, 0, 0],
+                "direction": [1,0,0],
+                "speed": 10.0,
+                "radius": 1.0,
+                "start": 2.0,
+                "duration": 2.0,
+                "offset": [0, -0.5, 0]
+                });
+                humanID += 1;
         }
     </script>
 </body>
