updated interface a bit, need to get drone to actually stop at these locations

--- a/apps/transit_service/web/schedule.html
+++ b/apps/transit_service/web/schedule.html
@@ -70,9 +70,10 @@
     <div><input type="button" value="Schedule Trip" onclick="schedule()"></div>
 
     <div><input type="button" value="Add Human" onclick="addHuman()" style="margin-top: 10px;"></div>
-
+    </div>
     <div class="indent">Canes Menu:
         <select id="search-strategy">
+            <option value="astar">None</option>
             <option value="astar">3 Piece</option>
             <option value="dfs">4 Piece</option>
             <option value="dijkstra">6 Piece</option>
@@ -80,6 +81,7 @@
     </div>
     <div class="indent">Chic-Fil-A Menu:
         <select id="search-strategy">
+            <option value="astar">None</option>
             <option value="astar">Sandwich</option>
             <option value="dfs">Nuggets</option>
             <option value="dijkstra">Salad</option>
@@ -87,6 +89,7 @@
     </div>
     <div class="indent">Chipotle Menu:
         <select id="search-strategy">
+            <option value="astar">None</option>
             <option value="astar">Bowl</option>
             <option value="dfs">Burrito</option>
             <option value="dijkstra">Tacos</option>
