implemented working button

--- a/apps/transit_service/web/schedule.html
+++ b/apps/transit_service/web/schedule.html
@@ -70,6 +70,7 @@
     <div><input type="button" value="Schedule Trip" onclick="schedule()"></div>
 
     <div><input type="button" value="Add Human" onclick="addHuman()" style="margin-top: 10px;"></div>
+    <div><input type="button" value="Print data" onclick="printData()" style="margin-top: 10px;"></div>
     </div>
     <div class="indent">Canes Menu:
         <select id="search-strategy">
@@ -213,6 +214,10 @@
                 "offset": [0, -0.5, 0]
                 });
                 humanID += 1;
+        }
+
+        function printData(){
+            api.sendCommand("outputDataToCSV", {});
         }
 
     </script>
