--- a/csci4131/Homework/HW1/testimonies.html
+++ b/csci4131/Homework/HW1/testimonies.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <title>Testimonials</title>
+    </head>
     <body>
         <iframe src="https://www.youtube.com/embed/XZBeOHN_XWI" title="The Greatest Snake Oil Salesman of All Time: The Story of Peruna" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border: hidden"></iframe>
         <div class="review">
