reorganize sql stuff

--- a/csci4131/Homework/HW1/contactform.html
+++ b/csci4131/Homework/HW1/contactform.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>Contact Page</title>
-        <h1>Send us Your Contact Info</h1>
     </head>
     <body>
+        <ul>
+            <li><a href="/main">Main Page</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/testimonies">Testimonies</a></li>
+        </ul>
+        <h1>Send us Your Contact Info</h1>
         <form action="/contact" method="get">
             <div>
                 <label for="name">Name:</label>
