--- a/csci4131/Homework/HW1/mainpage.html
+++ b/csci4131/Homework/HW1/mainpage.html
@@ -3,6 +3,11 @@
         <title>The Snake Oil Salesman</title>
     </head>
     <body>
+        <ul>
+            <li><a href="/main">Main Page</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/testimonies">Testimonies</a></li>
+        </ul>
         <h1>The Snake Oil Salesman</h1>
         <h2>It does anything and everything</h2>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ffirst10em.b-cdn.net%2Fwp-content%2Fuploads%2F2019%2F06%2FSnake-Oil-Salesman.jpg&f=1&nofb=1&ipt=06c9e6c3bbe1e35dae5b3af6ccf48ba370fc31de557c0cd6b2ca0328a085d1d4&ipo=images" alt="The Snake Oil Salesman" width=512 height = 388>
