--- a/csci4131/Homework/HW1/testimonies.html
+++ b/csci4131/Homework/HW1/testimonies.html
@@ -3,6 +3,11 @@
         <title>Testimonials</title>
     </head>
     <body>
+        <ul>
+            <li><a href="/main">Main Page</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/testimonies">Testimonies</a></li>
+        </ul>
         <iframe src="https://www.youtube.com/embed/XZBeOHN_XWI" title="The Greatest Snake Oil Salesman of All Time: The Story of Peruna" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border: hidden"></iframe>
         <div class="review">
             <p class="review-body">What am I supposed to do with this.</p>
