--- a/csci4131/Homework/HW1/404.html
+++ b/csci4131/Homework/HW1/404.html
@@ -4,6 +4,11 @@
         <h1>404 Page Not Found</h1>
     </head>
     <body>
+        <ul>
+            <li><a href="/main">Main Page</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/testimonies">Testimonies</a></li>
+        </ul>
         <p>If you would like to buy some of my snake oil <a href="mainpage.html">click here</a> to return to the main page.</p>
     </body>
 </html>
