--- a/csci4131/Homework/HW1/contactform.html
+++ b/csci4131/Homework/HW1/contactform.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Contact Page</title>
+        <meta charset="UTF-8">
     </head>
     <body>
         <ul>
@@ -30,11 +31,11 @@
                 </select>
             </div>
             <div>
-                <input type="checkbox" id="subscribe" name="subscribe">
                 <label for="subscribe">Subscribe to our newsletter</label>
+                <input type="checkbox" id="subscribe" name="subscribe">
             </div>
             <div>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" name="SubmitButton">
             </div>
         </form>
     </body>
