--- a/csci4131/Homework/HW1/mainpage.html
+++ b/csci4131/Homework/HW1/mainpage.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>The Snake Oil Salesman</title>
+        <meta charset="UTF-8">
     </head>
     <body>
         <ul>
@@ -14,7 +15,7 @@
         <p>What is the most important resource to humanity right now? <strong>Oil</strong>, and what is the most abundant resource, <em>Snakes</em>.</p>
         <p>Our Service puts oil in your hands from the snakes in ours. What does it do? Who knows but you should buy it anyway!</p>
         <ol>
-            <li>Snake Oil</li>
+            <li>5ml of Snake Oil</li>
             <li>Gallon of Snake Oil</li>
             <li>Barrel of Snake Oil</li>
             <li>Please I have so much Snake Oil I can't get rid of it just take it from me</li>
