--- a/csci4131/Homework/HW1/testimonies.html
+++ b/csci4131/Homework/HW1/testimonies.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Testimonials</title>
+        <meta charset="UTF-8">
     </head>
     <body>
         <ul>
@@ -9,6 +10,7 @@
             <li><a href="/testimonies">Testimonies</a></li>
         </ul>
         <iframe src="https://www.youtube.com/embed/XZBeOHN_XWI" title="The Greatest Snake Oil Salesman of All Time: The Story of Peruna" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border: hidden"></iframe>
+        
         <div class="review">
             <p class="review-body">What am I supposed to do with this.</p>
             <p class="reviewer-name">Tom P</p>
