--- a/csci4131/Homework/HW1/404.html
+++ b/csci4131/Homework/HW1/404.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Error Page not found</title>
-        <h1>404 Page Not Found</h1>
+        <meta charset="UTF-8">
     </head>
     <body>
         <ul>
@@ -9,6 +9,7 @@
             <li><a href="/contact">Contact</a></li>
             <li><a href="/testimonies">Testimonies</a></li>
         </ul>
+        <h1>404 Page Not Found</h1>
         <p>If you would like to buy some of my snake oil <a href="mainpage.html">click here</a> to return to the main page.</p>
     </body>
 </html>
