--- a/csci4131/Homework/HW3/static/html/contactform.html
+++ b/csci4131/Homework/HW3/static/html/contactform.html
@@ -15,7 +15,7 @@
             <a href="/admin/contactlog">Contact Log</a>
         </div> 
         <h1>Send us Your Contact Info</h1>
-        <form action="/contact" method="get">
+        <form action="/contact" method="post">
             <div class=formfield>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
