--- a/csci4131/Homework/HW3/static/html/mainpage.html
+++ b/csci4131/Homework/HW3/static/html/mainpage.html
@@ -2,7 +2,9 @@
     <head>
         <title>The Snake Oil Salesman</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../css/main.css">
+        <link id="dark-theme" rel="stylesheet" href="../css/main.dark.css">
+        <link id="light-theme" rel="stylesheet" href="../css/main.css">
+        <script src="../js/main.js"></script>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
         </style>
@@ -13,6 +15,7 @@
             <a href="/contact">Contact</a>
             <a href="/testimonies">Testimonies</a>
             <a href="/admin/contactlog">Contact Log</a>
+            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
         </div> 
         <h1>The Snake Oil Salesman</h1>
         <h2>It does anything and everything</h2>
