--- a/csci4131/Homework/HW3/static/html/testimonies.html
+++ b/csci4131/Homework/HW3/static/html/testimonies.html
@@ -3,6 +3,8 @@
         <title>Testimonials</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/main.dark.css">
+        <script src="../js/main.js"></script>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
         </style>
@@ -13,6 +15,7 @@
             <a href="/contact">Contact</a>
             <a class="active" href="/testimonies">Testimonies</a>
             <a href="/admin/contactlog">Contact Log</a>
+            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
         </div> 
         <h1>Customer Reviews!</h1>
         <iframe src="https://www.youtube.com/embed/XZBeOHN_XWI" title="The Greatest Snake Oil Salesman of All Time: The Story of Peruna"  allowfullscreen style="border: hidden"></iframe>
