--- a/csci4131/Homework/HW3/static/html/404.html
+++ b/csci4131/Homework/HW3/static/html/404.html
@@ -3,6 +3,8 @@
         <title>Error Page not found</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/main.dark.css">
+        <script src="../js/main.js"></script>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
         </style>
@@ -13,6 +15,7 @@
             <a href="/contact">Contact</a>
             <a href="/testimonies">Testimonies</a>
             <a href="/admin/contactlog">Contact Log</a>
+            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
         </div>
         <h1>404 Page Not Found</h1>
         <p>If you would like to buy some of my snake oil <a href="mainpage.html">click here</a> to return to the main page.</p>
