--- a/csci4131/Homework/HW3/static/html/mainpage.html
+++ b/csci4131/Homework/HW3/static/html/mainpage.html
@@ -12,10 +12,10 @@
     <body>
         <div class="navbar">
             <a class="active" href="/main">Home</a>
-            <a href="/contact">Contact</a>
+            <a href="/contact">Order</a>
             <a href="/testimonies">Testimonies</a>
-            <a href="/admin/contactlog">Contact Log</a>
-            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
+            <a href="/admin/contactlog">Order Log</a>
+            <a id="theme-toggle" href="">Dark Mode Toggle</a>
         </div> 
         <h1>The Snake Oil Salesman</h1>
         <h2>It does anything and everything</h2>
