--- a/csci4131/Homework/HW3/static/html/testimonies.html
+++ b/csci4131/Homework/HW3/static/html/testimonies.html
@@ -12,10 +12,10 @@
     <body>
         <div class="navbar">
             <a href="/main">Home</a>
-            <a href="/contact">Contact</a>
+            <a href="/contact">Order</a>
             <a class="active" href="/testimonies">Testimonies</a>
-            <a href="/admin/contactlog">Contact Log</a>
-            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
+            <a href="/admin/contactlog">Order Log</a>
+            <a id="theme-toggle" href="">Dark Mode Toggle</a>
         </div> 
         <h1>Customer Reviews!</h1>
         <iframe src="https://www.youtube.com/embed/XZBeOHN_XWI" title="The Greatest Snake Oil Salesman of All Time: The Story of Peruna"  allowfullscreen style="border: hidden"></iframe>
