--- a/csci4131/Homework/HW3/static/html/404.html
+++ b/csci4131/Homework/HW3/static/html/404.html
@@ -12,17 +12,12 @@
     <body>
         <div class="navbar">
             <a href="/main">Home</a>
-            <a href="/contact">Contact</a>
+            <a href="/contact">Order</a>
             <a href="/testimonies">Testimonies</a>
-            <a href="/admin/contactlog">Contact Log</a>
-            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
+            <a href="/admin/contactlog">Order Log</a>
+            <a id="theme-toggle" href="">Dark Mode Toggle</a>
         </div>
         <h1>404 Page Not Found</h1>
         <p>If you would like to buy some of my snake oil <a href="mainpage.html">click here</a> to return to the main page.</p>
     </body>
 </html>
-<!-- 
-    title
-    valid html
-    page should say file not found
- -->
