--- a/csci4131/Homework/HW3/static/html/contactform.html
+++ b/csci4131/Homework/HW3/static/html/contactform.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>Contact Page</title>
+        <title>Order Page</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/main.dark.css">
@@ -13,12 +13,12 @@
     <body>
         <div class="navbar">
             <a href="/main">Home</a>
-            <a class="active" href="/contact">Contact</a>
+            <a class="active" href="/contact">Order</a>
             <a href="/testimonies">Testimonies</a>
-            <a href="/admin/contactlog">Contact Log</a>
-            <a id="theme-toggle" href="#">Dark Mode Toggle</a>
+            <a href="/admin/contactlog">Order Log</a>
+            <a id="theme-toggle" href="">Dark Mode Toggle</a>
         </div> 
-        <h1>Send us Your Contact Info</h1>
+        <h1>Order some Snake Oil</h1>
         <form action="/contact" method="post">
             <div class=formfield>
                 <label for="name">Name:</label>
